--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "Hassan-Portfolio",
+	"homepage":"https://Hassan3322751.github.io/My-Portfolio",
 	"version": "1.1.0",
 	"description": "Portfolio template built using Reactjs",
 	"author": {
