--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "Hassan-Portfolio",
-	"homepage":"https://Hassan3322751.github.io/My-Portfolio",
+	"homepage": "https://Hassan3322751.github.io/My-Portfolio",
 	"version": "1.1.0",
 	"description": "Portfolio template built using Reactjs",
 	"author": {
@@ -18,7 +18,6 @@
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
-		"gh-pages": "^6.1.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-ga4": "^2.1.0",
@@ -33,8 +32,8 @@
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"predeploy" : "npm run build",
-		"deploy" : "gh-pages -d build"
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build -r https://github.com/Hassan3322751/My-Portfolio.git"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -57,5 +56,8 @@
 	"prettier": {
 		"useTabs": true,
 		"tabWidth": 4
+	},
+	"devDependencies": {
+		"gh-pages": "^6.2.0"
 	}
 }
